@@ -6,7 +6,6 @@ plugins {
 
     id("org.springframework.boot") version "3.4.5"
     id("io.spring.dependency-management") version "1.1.7"
-    id("org.openjfx.javafxplugin") version "0.0.14"
 }
 
 group = "org.example"
@@ -17,13 +16,6 @@ repositories {
 }
 
 dependencies {
-
-    // Main dependencies for JavaFX
-    implementation("org.openjfx:javafx-controls:21.0.6")
-    implementation("org.openjfx:javafx-fxml:21.0.6")
-    // ControlsFX library for additional UI controls.
-    implementation("org.controlsfx:controlsfx:11.2.2")
-
 
     // Starter for Spring Boot.
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
@@ -46,26 +38,8 @@ dependencies {
     testImplementation("org.mockito:mockito-junit-jupiter:5.2.0")
 }
 
-javafx {
-    version = "21.0.6"
-    modules = listOf("javafx.controls", "javafx.fxml")
-}
-
 application {
-    mainClass.set("Lineage2CalculatorGUI.MainFX")
-}
-
-tasks.named<BootJar>("bootJar") {
-    mainClass.set("Lineage2Calculator.Main")   // <— backend
-    archiveFileName.set("app.jar")
-    exclude("Lineage2CalculatorGUI/**")        // wytnij GUI z JAR-a serwera
-}
-
-tasks.withType<JavaExec>().configureEach {
-    jvmArgs(
-        "-Xmx1024m", "-Xms512m",
-        "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
-    )
+    mainClass.set("Lineage2Calculator.Main")
 }
 
 tasks.withType<JavaCompile> {
